manifests/app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aichat-gateway-deployment
  namespace: default
  labels:
    app: aichat-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aichat-gateway
  template:
    metadata:
      labels:
        app: aichat-gateway
    spec:
      containers:
        - name: aichat-gateway-container
          image: ghcr.io/notbjoggisatall/aichat-gateway:1.0-SNAPSHOT
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
          ports:
            - containerPort: 8082
            - containerPort: 8083
      imagePullSecrets:
        - name: credentials
---
apiVersion: v1
kind: Service
metadata:
  name: aichat-gateway-service
spec:
  selector:
    app: aichat-gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aichat-gateway-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: ai.bjoggis.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: aichat-gateway-service
                port:
                  number: 80
